--- a/sections/appconstraints.tex
+++ b/sections/appconstraints.tex
@@ -25,35 +25,34 @@ We used a script\footnote{
 to find concrete parameters that allow for instantiating Chipmunk based on a hard ring-SIS problem.
 We have used a fixed ring dimension $n = 512$.
 A selection of possible parameter choices is given in Table~\ref{tab:param}.
-
-% ┌──────────┬───────┬────────┬───────────┬───────────┬───────┬───────────┬───────┬─────────┬──────────────┬──────────┬───────┬────────────┬──────────┬────────┐
-% &   secpar &   tau &    rho & epsilon   &   alpha_w &   chi &   alpha_H &   phi &   gamma &   beta_sigma &       q' &   eta &   beta_agg &        q & size   &
-% ├──────────┼───────┼────────┼───────────┼───────────┼───────┼───────────┼───────┼─────────┼──────────────┼──────────┼───────┼────────────┼──────────┼────────┤
-% &      112 &    21 &   1024  &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    73 &      62279 &   514049 & 92 KB  &
-% &      112 &    21 &   8192  &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &   110 &     265431 &  2123777 & 109 KB &
-% &      112 &    21 & 131072  &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &   163 &    1573282 & 12587009 & 128 KB &
-% &      112 &    23 &   1024  &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    73 &      62401 &   514049 & 99 KB  &
-% &      112 &    23 &   8192  &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &   110 &     265951 &  2148353 & 118 KB &
-% &      112 &    23 & 131072  &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &   163 &    1576360 & 12623873 & 138 KB &
-% &      112 &    24 &   1024  &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    73 &      62458 &   514049 & 103 KB &
-% &      112 &    24 &   8192  &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &   110 &     266194 &  2148353 & 123 KB &
-% &      112 &    24 & 131072  &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &   163 &    1577802 & 12623873 & 144 KB &
-% &      112 &    26 &   1024  &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    73 &      62565 &   514049 & 110 KB &
-% &      112 &    26 &   8192  &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &   110 &     266652 &  2148353 & 132 KB &
-% &      112 &    26 & 131072  &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &   163 &    1580518 & 12644353 & 154 KB &
-% &      128 &    21 &   1024  &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    71 &      66007 &   534529 & 93 KB  &
-% &      128 &    21 &   8192  &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    26 &      68809 &   557057 & 144 KB &
-% &      128 &    21 & 131072  &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    37 &     391681 &  3168257 & 167 KB &
-% &      128 &    23 &   1024  &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    71 &      66136 &   534529 & 100 KB &
-% &      128 &    23 &   8192  &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    26 &      68942 &   557057 & 156 KB &
-% &      128 &    23 & 131072  &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    37 &     392437 &  3168257 & 181 KB &
-% &      128 &    24 &   1024  &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    71 &      66197 &   534529 & 104 KB &
-% &      128 &    24 &   8192  &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    26 &      69004 &   557057 & 162 KB &
-% &      128 &    24 & 131072  &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    37 &     392792 &  3168257 & 188 KB &
-% &      128 &    26 &   1024  &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    71 &      66311 &   534529 & 112 KB &
-% &      128 &    26 &   8192  &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    26 &      69122 &   557057 & 174 KB &
-% &      128 &    26 & 131072  &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    37 &     393459 &  3168257 & 202 KB &
-% └──────────┴───────┴────────┴───────────┴───────────┴───────┴───────────┴───────┴─────────┴──────────────┴──────────┴───────┴────────────┴──────────┴────────┘
+% ┌──────────┬───────┬────────┬───────────┬───────────┬───────┬───────────┬───────┬─────────┬──────────────┬──────────┬───────┬────────────┬─────────┬────────┐
+% │   secpar │   tau │    rho │ epsilon   │   alpha_w │   chi │   alpha_H │   phi │   gamma │   beta_sigma │       q' │   eta │   beta_agg │       q │ size   │
+% ├──────────┼───────┼────────┼───────────┼───────────┼───────┼───────────┼───────┼─────────┼──────────────┼──────────┼───────┼────────────┼─────────┼────────┤
+% │      112 │    21 │   1024 │ 1/32768   │        16 │    12 │        37 │    13 │       6 │       761464 │  3115009 │    29 │      24750 │  202753 │ 118 KB │
+% │      112 │    21 │   8192 │ 1/32768   │        16 │    12 │        37 │    16 │       6 │      2650762 │ 10684417 │    49 │     118278 │  962561 │ 136 KB │
+% │      112 │    21 │ 131072 │ 1/32768   │        16 │    12 │        37 │    13 │       7 │      8649632 │ 34676737 │    98 │     946220 │ 7591937 │ 159 KB │
+% │      112 │    23 │   1024 │ 1/32768   │        16 │    12 │        37 │    13 │       6 │       761464 │  3115009 │    29 │      24797 │  202753 │ 128 KB │
+% │      112 │    23 │   8192 │ 1/32768   │        16 │    12 │        37 │    16 │       6 │      2650762 │ 10684417 │    49 │     118506 │  962561 │ 147 KB │
+% │      112 │    23 │ 131072 │ 1/32768   │        16 │    12 │        37 │    13 │       7 │      8649632 │ 34676737 │    98 │     948044 │ 7591937 │ 172 KB │
+% │      112 │    24 │   1024 │ 1/32768   │        16 │    12 │        37 │    13 │       6 │       761464 │  3115009 │    29 │      24820 │  202753 │ 133 KB │
+% │      112 │    24 │   8192 │ 1/32768   │        16 │    12 │        37 │    16 │       6 │      2650762 │ 10684417 │    49 │     118613 │  962561 │ 153 KB │
+% │      112 │    24 │ 131072 │ 1/32768   │        16 │    12 │        37 │    13 │       7 │      8649632 │ 34676737 │    98 │     948899 │ 7591937 │ 179 KB │
+% │      112 │    26 │   1024 │ 1/32768   │        16 │    12 │        37 │    13 │       6 │       761464 │  3115009 │    29 │      24862 │  202753 │ 143 KB │
+% │      112 │    26 │   8192 │ 1/32768   │        16 │    12 │        37 │    16 │       6 │      2650762 │ 10684417 │    49 │     118814 │  962561 │ 164 KB │
+% │      112 │    26 │ 131072 │ 1/32768   │        16 │    12 │        37 │    13 │       7 │      8649632 │ 34676737 │    98 │     950510 │ 7616513 │ 192 KB │
+% │      128 │    21 │   1024 │ 1/32768   │        19 │    14 │        44 │     9 │       7 │       685898 │  2836481 │    31 │      28830 │  249857 │ 120 KB │
+% │      128 │    21 │   8192 │ 1/32768   │        19 │    14 │        44 │     8 │       8 │      1730419 │  7026689 │    12 │      31766 │  270337 │ 168 KB │
+% │      128 │    21 │ 131072 │ 1/32768   │        19 │    14 │        44 │     9 │       8 │      7786884 │ 31221761 │    17 │     180007 │ 1454081 │ 197 KB │
+% │      128 │    23 │   1024 │ 1/32768   │        19 │    14 │        44 │     9 │       7 │       685898 │  2836481 │    31 │      28886 │  249857 │ 129 KB │
+% │      128 │    23 │   8192 │ 1/32768   │        19 │    14 │        44 │     8 │       8 │      1730419 │  7026689 │    12 │      31827 │  270337 │ 182 KB │
+% │      128 │    23 │ 131072 │ 1/32768   │        19 │    14 │        44 │     9 │       8 │      7786884 │ 31221761 │    17 │     180351 │ 1454081 │ 214 KB │
+% │      128 │    24 │   1024 │ 1/32768   │        19 │    14 │        44 │     9 │       7 │       685898 │  2836481 │    31 │      28912 │  249857 │ 134 KB │
+% │      128 │    24 │   8192 │ 1/32768   │        19 │    14 │        44 │     8 │       8 │      1730419 │  7026689 │    12 │      31855 │  270337 │ 189 KB │
+% │      128 │    24 │ 131072 │ 1/32768   │        19 │    14 │        44 │     9 │       8 │      7786884 │ 31221761 │    17 │     180512 │ 1454081 │ 222 KB │
+% │      128 │    26 │   1024 │ 1/32768   │        19 │    14 │        44 │     9 │       7 │       685898 │  2836481 │    31 │      28961 │  249857 │ 144 KB │
+% │      128 │    26 │   8192 │ 1/32768   │        19 │    14 │        44 │     8 │       8 │      1730419 │  7026689 │    12 │      31909 │  270337 │ 203 KB │
+% │      128 │    26 │ 131072 │ 1/32768   │        19 │    14 │        44 │     9 │       8 │      7786884 │ 31221761 │    17 │     180816 │ 1454081 │ 238 KB │
+% └──────────┴───────┴────────┴───────────┴───────────┴───────┴───────────┴───────┴─────────┴──────────────┴──────────┴───────┴────────────┴─────────┴────────┘
 
 \bgroup
 \setlength{\tabcolsep}{0.5em}
@@ -77,29 +76,40 @@ A selection of possible parameter choices is given in Table~\ref{tab:param}.
   
       % &       &        &            &  &  \multicolumn{4}{c||}{HVC}  &  & \multicolumn{2}{c||}{KOTS}  & (Kilobytes) \\\hline\hline
 
-          &       &   1024  &        16 &    12 &        37 &    13 &       6 &        761,464 &  3,115,009 &    73 &       62,279 &    514,049 & 92 KB  \\
-          &    21 &   8192  &        16 &    12 &        37 &    16 &       6 &      2,650,762 & 10,684,417 &   110 &      265,431 &  2,123,777 & 109 KB \\
-          &       & 131072  &        16 &    12 &        37 &    13 &       7 &      8,649,632 & 34,676,737 &   163 &    1,573,282 & 12,587,009 & 128 KB \\\cline{2-14}
+      \multirow{ 12}{*}{112}    
+          &       &   1024   &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    29 &      24750 &  202753 & 118 KB \\
+          &    21 &   8192   &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &    49 &     118278 &  962561 & 136 KB \\
+          &       & 131072   &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &    98 &     946220 & 7591937 & 159 KB \\\cline{2-14}
 
-          &       &   1024  &        16 &    12 &        37 &    13 &       6 &        761,464 &  3,115,009 &    73 &       62,458 &    514,049 & 103 KB \\
-      112 &    24 &   8192  &        16 &    12 &        37 &    16 &       6 &      2,650,762 & 10,684,417 &   110 &      266,194 &  2,148,353 & 123 KB \\
-          &       & 131072  &        16 &    12 &        37 &    13 &       7 &      8,649,632 & 34,676,737 &   163 &    1,577,802 & 12,623,873 & 144 KB \\\cline{2-14}
 
-          &       &   1024  &        16 &    12 &        37 &    13 &       6 &        761,464 &  3,115,009 &    73 &       62,565 &    514,049 & 110 KB \\
-          &    26 &   8192  &        16 &    12 &        37 &    16 &       6 &      2,650,762 & 10,684,417 &   110 &      266,652 &  2,148,353 & 132 KB \\
-          &       & 131072  &        16 &    12 &        37 &    13 &       7 &      8,649,632 & 34,676,737 &   163 &    1,580,518 & 12,644,353 & 154 KB \\\midrule
+          &       &   1024   &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    29 &      24797 &  202753 & 128 KB \\
+          &    23 &   8192   &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &    49 &     118506 &  962561 & 147 KB \\
+          &       & 131072   &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &    98 &     948044 & 7591937 & 172 KB \\\cline{2-14}
+  
+          &       &   1024   &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    29 &      24820 &  202753 & 133 KB \\
+          &    24 &   8192   &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &    49 &     118613 &  962561 & 153 KB \\
+          &       & 131072   &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &    98 &     948899 & 7591937 & 179 KB \\\cline{2-14}
+      
+          &       &   1024   &        16 &    12 &        37 &    13 &       6 &       761464 &  3115009 &    29 &      24862 &  202753 & 143 KB \\
+          &    26 &   8192   &        16 &    12 &        37 &    16 &       6 &      2650762 & 10684417 &    49 &     118814 &  962561 & 164 KB \\
+          &       & 131072   &        16 &    12 &        37 &    13 &       7 &      8649632 & 34676737 &    98 &     950510 & 7616513 & 192 KB \\\midrule
+      
+      \multirow{ 12}{*}{128} 
+          &       &   1024   &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    31 &      28830 &  249857 & 120 KB \\
+          &    21 &   8192   &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    12 &      31766 &  270337 & 168 KB \\
+          &       & 131072   &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    17 &     180007 & 1454081 & 197 KB \\\cline{2-14}
 
-          &       &   1024  &        19 &    14 &        44 &     9 &       7 &        685,898 &  2,836,481 &    71 &       66,007 &    534,529 & 93 KB  \\
-          &    21 &   8192  &        19 &    14 &        44 &     8 &       8 &      1,730,419 &  7,026,689 &    26 &       68,809 &    557,057 & 144 KB \\
-          &       & 131072  &        19 &    14 &        44 &     9 &       8 &      7,786,884 & 31,221,761 &    37 &      391,681 &  3,168,257 & 167 KB \\\cline{2-14}
-
-          &       &   1024  &        19 &    14 &        44 &     9 &       7 &        685,898 &  2,836,481 &    71 &       66,197 &    534,529 & 104 KB \\
-      128 &    24 &   8192  &        19 &    14 &        44 &     8 &       8 &      1,730,419 &  7,026,689 &    26 &       69,004 &    557,057 & 162 KB \\
-          &       & 131072  &        19 &    14 &        44 &     9 &       8 &      7,786,884 & 31,221,761 &    37 &      392,792 &  3,168,257 & 188 KB \\\cline{2-14}
-
-          &       &   1024  &        19 &    14 &        44 &     9 &       7 &        685,898 &  2,836,481 &    71 &       66,311 &    534,529 & 112 KB \\
-          &    26 &   8192  &        19 &    14 &        44 &     8 &       8 &      1,730,419 &  7,026,689 &    26 &       69,122 &    557,057 & 174 KB \\
-          &       & 131072  &        19 &    14 &        44 &     9 &       8 &      7,786,884 & 31,221,761 &    37 &      393,459 &  3,168,257 & 202 KB \\\bottomrule
+          &       &   1024   &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    31 &      28886 &  249857 & 129 KB \\
+          &    23 &   8192   &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    12 &      31827 &  270337 & 182 KB \\
+          &       & 131072   &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    17 &     180351 & 1454081 & 214 KB \\\cline{2-14}
+      
+          &       &   1024   &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    31 &      28912 &  249857 & 134 KB \\
+          &    24 &   8192   &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    12 &      31855 &  270337 & 189 KB \\
+          &       & 131072   &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    17 &     180512 & 1454081 & 222 KB \\\cline{2-14}
+      
+          &       &   1024   &        19 &    14 &        44 &     9 &       7 &       685898 &  2836481 &    31 &      28961 &  249857 & 144 KB \\
+          &    26 &   8192   &        19 &    14 &        44 &     8 &       8 &      1730419 &  7026689 &    12 &      31909 &  270337 & 203 KB \\
+          &       & 131072   &        19 &    14 &        44 &     9 &       8 &      7786884 & 31221761 &    17 &     180816 & 1454081 & 238 KB \\\bottomrule
 
   %     &       &   1024 &         16 &        12 &        37 &         13 &       6 &        761464 &  3115009 &    73 &       62279 &   202,753 & 120 \\%\cline{3-13}
   %     &    21 &   8192 &         16 &        12 &        37 &         16 &       6 &      2650762 & 10684417 &    110 &      265431 &   962,561 & 135 \\%\cline{3-13}
