--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -52,10 +52,10 @@ In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor o
 For keys that can generate $2^{24}$ signatures, an individual Chipmunk signatures is $37$ KB and aggregating $8192$ signatures results in an aggregate signature that is $180$ KB large. %\gnote{@Zhenfei:Double-Check}
 }
 \eprint{
-In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor of $7\times$, when compared to Squirrel.
-For keys that can generate $2^{24}$ signatures, an individual Chipmunk signatures is $37$ KB and aggregating $8192$ signatures results in an aggregate signature that is $123$ KB large. %\gnote{@Zhenfei:Double-Check}
+In terms of bandwidth, Chipmunk's aggregate signatures are smaller by a factor of $5.6\times$, when compared to Squirrel.
+For keys that can generate $2^{21}$ signatures, an individual Chipmunk signatures is $37$ KB and aggregating $8192$ signatures results in an aggregate signature that is $136$ KB large. %\gnote{@Zhenfei:Double-Check}
 % TODO
-\gnote{Correct statement about performance metrics here, factor by which sizes are smaller are wrong in one the versions.}
+%\gnote{Correct statement about performance metrics here, factor by which sizes are smaller are wrong in one the versions.}
 }
 % \gnote{@Zhenfei: I think the versions are flipped}
 %The gap between Chipmunk's and Squirrel's performance increases with an increasing bound on the number of signatures that should issuable with a single key.
